# CreaTech

./: render.yaml
formkit_optimizer/: README.md  demo.py  pyproject.toml  requirements.txt
formkit_optimizer/api/: main.py
formkit_optimizer/backend/: app.py  database.py  models.py  schemas.py  seed.py
formkit_optimizer/data_pipeline/: __init__.py  ingestion.py
formkit_optimizer/docs/: ARCHITECTURE.md  PRODUCT_DESIGN.md  QA_DEFENSE_GUIDE.md  SLIDE_DECK_SCRIPT.md
formkit_optimizer/engine/: __init__.py  optimizer.py  validation.py
formkit_optimizer/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
formkit_optimizer/frontend/src/: App.jsx  index.css
formkit_optimizer/frontend/src/api/: client.js
formkit_optimizer/frontend/src/components/: AddInventoryModal.jsx  AddPourModal.jsx  AnimatedNumber.jsx  ImportProjectModal.jsx  Layout.jsx  NewProjectModal.jsx  StatCard.jsx
formkit_optimizer/frontend/src/pages/: Analytics.jsx  Dashboard.jsx  Inventory.jsx  Kits.jsx  Optimization.jsx  Pours.jsx
formkit_optimizer/schemas/: 001_core_schema.sql  002_seed_data.sql
