# FormKit Optimizer
# Formwork Kitting & BoQ Optimization System — L&T Internal

[project]
name = "formkit-optimizer"
version = "1.0.0"
description = "Automation of Formwork Kitting & BoQ Optimization Using Data Science"
requires-python = ">=3.11"
dependencies = [
    "ortools>=9.9",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pandas>=2.2",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100
